Fixed to incl <hr> in grid

--- a/index.html
+++ b/index.html
@@ -10,14 +10,13 @@
         <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400" rel="stylesheet">
         <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
         <link rel="stylesheet" href="css/main.css">
-        <script src="bootstrap/js/jquery-3.1.1.js"></script>
-        <script src="bootstrap/js/bootstrap.min.js"></script>
+        <script async src="bootstrap/js/jquery-3.1.1.js"></script>
+        <script async src="bootstrap/js/bootstrap.min.js"></script>
     </head>
 
     <body>
 
         <div class="container">
-
             <header class="row">
                 <figure class="col-xs-3 header-picture-wrap">
                     <img class="img-responsive img-logo" src="images/udacity-logo.svg" alt="udacity logo"/>
@@ -30,7 +29,12 @@
             </header>
             <!---End Header-->
 
-            <hr class="row top-hr-line">
+            <div class="row">
+                <div class="col-xs-12">
+                    <hr class="top-hr-line">
+                </div>
+            </div>
+            <!---End Horizontal Line-->
 
             <main class="row">
                 <figure class="col-xs-12">
@@ -66,7 +70,12 @@
             </main>
             <!---End Main Section-->
 
-            <hr class="row bottom-hr-line">
+            <div class="row">
+                <div class="col-xs-12">
+                    <hr class="bottom-hr-line">
+                </div>
+            </div>
+            <!---End Horizontal Line-->
 
             <footer class="row">
                 <p class="col-xs-12">Image for this page designed by
