Update banner styles

--- a/index.html
+++ b/index.html
@@ -17,11 +17,10 @@
 
     <body class="container-fluid">
 
-        <section class="row vertical-align page-header-wrapper text-uppercase">
-            <div class="col-xs text-uppercase" id="banner-area">
-                <h1>marina valiquette</h1>
-                <h3>junior front-end developer</h3>
-                <!--<img class="img-responsive main-section-img" src="images/man-build-wp.svg" alt="man building web page"/>-->
+        <section class="row vertical-align page-header-wrapper">
+            <div class="col-xs" id="banner-area">
+                <h1 class="text-uppercase">Marina Valiquette</h1>
+                <h3>Front-End Developer</h3>
             </div>
         </section>
         <!---End Banner Section-->
