--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="pinterest" content="nopin" />
-        <meta name="description" content="Marina Valiquette is a beginner front-end web developer.">
+        <meta name="description" content="Marina Valiquette is a junior front-end web developer.">
         <title>Marina Valiquette's Portfolio</title>
-        <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400" rel="stylesheet">
+         <!-- Google Font -->
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         <link rel="stylesheet" href="css/main.css">
-
     </head>
 
     <body class="container-fluid">
@@ -23,7 +23,7 @@
                 <h3>Front-End Developer</h3>
             </div>
         </section>
-        <!---End Banner Section-->
+        <!--- End Banner Section -->
 
         <section class="row" id="main">
             <h2 class="col-xs" id="main-header">projects</h2>
