Fix links, styles

--- a/index.html
+++ b/index.html
@@ -37,19 +37,18 @@
                         <p>KnockoutJS, ES6 Promises</p>
                         <p>
                             This single-page application makes about 100 async requests to the third-party API's on the page load. The biggest challenge for me was to create a stack that would make as many concurrent calls as possible. As a result, the page loading speed and rendering were optimized to allow for a better UX.
-
                         </p>
                         <p>
                             2017
                         </p>
                     </div>
                     <div class="article-img-holder">
-                        <img class="article-img" src="images/neighborhood_map.png" alt="map" data-toggle="modal" data-target="#project1"/>
+                        <img class="article-img" src="images/neighborhood_map.png" alt="map" nopin="nopin"/>
                     </div>
 
                     <div class="article-bttns">
-                        <a class="btn btn-info" href="https://sakela17.github.io/frontend-nanodegree-neighborhood-map/" role="button" target="_blank">Demo</a>
-                        <a class="btn btn-info" href="https://github.com/Sakela17/frontend-nanodegree-neighborhood-map/" role="button" target="_blank">GitHub</a>
+                        <a class="btn btn-play" href="https://sakela17.github.io/frontend-nanodegree-neighborhood-map/" role="button" target="_blank">Demo</a>
+                        <a class="btn btn-link" href="https://github.com/Sakela17/frontend-nanodegree-neighborhood-map/" role="button" target="_blank">GitHub</a>
                     </div>
                 </article>
 
@@ -67,24 +66,17 @@
                         </p>
                     </div>
                     <div class="article-img-holder">
-                        <img class="article-img" src="images/frogger_cropped.png" alt="frogger game" data-toggle="modal" data-target="#project1"/>
+                        <img class="article-img" src="images/frogger_cropped.png" alt="frogger game" nopin="nopin"/>
                     </div>
 
                     <div class="article-bttns">
-                        <a class="btn btn-info" href="https://sakela17.github.io/frontend-nanodegree-neighborhood-map/" role="button" target="_blank">Demo</a>
-                        <a class="btn btn-info" href="https://github.com/Sakela17/frontend-nanodegree-neighborhood-map/" role="button" target="_blank">GitHub</a>
+                        <a class="btn btn-play" href="https://sakela17.github.io/frontend-nanodegree-arcade-game/" role="button" target="_blank">Play</a>
+                        <a class="btn btn-link" href="https://github.com/Sakela17/frontend-nanodegree-arcade-game" role="button" target="_blank">GitHub</a>
                     </div>
                 </article>
             </div>
         </section>
         <!---End Main Section-->
-
-        <!--<div class="row bottom-hr-line">-->
-            <!--<div class="col-xs-12">-->
-                <!--<hr class="">-->
-            <!--</div>-->
-        <!--</div>-->
-        <!---End Horizontal Line-->
 
         <footer class="row">
             <ul>
