Remove old css rulesets

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <body class="container-fluid">
 
-        <section class="row vertical-align page-header-wrapper">
+        <section class="page-header-wrapper">
             <div class="col-xs" id="banner-area">
                 <h1>Marina Valiquette</h1>
                 <h2>Web Developer</h2>
@@ -27,7 +27,7 @@
         <section class="row" id="main">
             <h3 class="col-xs" id="main-header">projects</h3>
             <div class="col-xs" id="main-header-bar"></div>
-            <div class="row" id="gallery">
+            <div id="gallery">
 
                 <article>
                     <h4 class="article-title">
