Add article with the latest project

--- a/index.html
+++ b/index.html
@@ -31,6 +31,29 @@
 
                 <article>
                     <h4 class="article-title">
+                        Noteful API
+                    </h4>
+                    <div class="article-text">
+                        <p>Node/Express, MongoDB/Mongoose, Authentication</p>
+                        <p>
+                            I worked on this project while studying for Engineering Immersion program at Thinkful. The goal was to create a Node/Express app to host a client, serve a RESTful API to the client, and to create a Mongo-backed persistence layer.
+                        </p>
+                        <p>
+                            2018
+                        </p>
+                    </div>
+                    <div class="article-img-holder">
+                        <img class="article-img" src="images/Screen%20Shot%202018-05-13%20at%2022.07.55.png" alt="notes and folders" nopin="nopin"/>
+                    </div>
+
+                    <div class="article-bttns">
+                        <a class="btn btn-play" href="https://evening-wave-51959.herokuapp.com/" role="button" target="_blank">Demo</a>
+                        <a class="btn btn-link" href="https://github.com/Sakela17/noteful-app-MongoDB" role="button" target="_blank">GitHub</a>
+                    </div>
+                </article>
+
+                <article>
+                    <h4 class="article-title">
                         Neighborhood Map
                     </h4>
                     <div class="article-text">
