Change file name

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         </p>
                     </div>
                     <div class="article-img-holder">
-                        <img class="article-img" src="images/Screen%20Shot%202018-05-13%20at%2022.07.55.png" alt="notes and folders" nopin="nopin"/>
+                        <img class="article-img" src="images/noteful_api.png" alt="notes and folders" nopin="nopin"/>
                     </div>
 
                     <div class="article-bttns">
