Add new project

--- a/index.html
+++ b/index.html
@@ -31,6 +31,31 @@
 
                 <article>
                     <h4 class="article-title">
+                        Streamlined Beauty App
+                    </h4>
+                    <div class="article-text">
+                        <p>React, Redux, Node/Express, PostgresSQL</p>
+                        <p>
+                            I designed, implemented and deployed this MVP in two weeks while studying for Engineering Immersion program at Thinkful.
+                            My goal was to build a single-page, responsive, a11y-friendly app that appeals to freelance beauty professionals and consumers in metro Atlanta area.
+                            It features authentication, data persistence, account signup and more.
+                        </p>
+                        <p>
+                            2018
+                        </p>
+                    </div>
+                    <div class="article-img-holder">
+                        <img class="article-img" src="images/responsive-design.png" alt="responsive app views" nopin="nopin"/>
+                    </div>
+
+                    <div class="article-bttns">
+                        <a class="btn btn-play" href="https://streamlinedbeauty.netlify.com/" role="button" target="_blank">Live</a>
+                        <a class="btn btn-link" href="https://github.com/Sakela17/streamlined-beauty-app" role="button" target="_blank">GitHub</a>
+                    </div>
+                </article>
+
+                <article>
+                    <h4 class="article-title">
                         Noteful API
                     </h4>
                     <div class="article-text">
