Revise description. Remove images.

--- a/index.html
+++ b/index.html
@@ -84,7 +84,9 @@
                     <div class="article-text">
                         <p>KnockoutJS, ES6 Promises</p>
                         <p>
-                            This single-page application makes about 100 async requests to the third-party API's on the page load. The biggest challenge for me was to create a stack that would make as many concurrent calls as possible. As a result, the page loading speed and rendering were optimized to allow for a better UX.
+                            I developed this app while studying for FEND program at Udacity.
+                            I utilized data from Google API and Foursquare API to display a list of restaurants in my favourite neighborhood in Barcelona.
+                            It features responsive design and dropdown menu that filters list and the markers by category.
                         </p>
                         <p>
                             2017
