Modify project description

--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@
                     <div class="article-text">
                         <p>Node/Express, MongoDB/Mongoose, Authentication</p>
                         <p>
-                            I worked on this project while studying for Engineering Immersion program at Thinkful. The goal was to create a Node/Express app to host a client, serve a RESTful API to the client, and to create a Mongo-backed persistence layer.
+                            I worked on this app while studying for Engineering Immersion program at Thinkful.
+                            This was my first project where I used NodeJS and Express to build a RESTful API for the client.
+                            It features protected endpoints and a Mongo-backed persistence layer.
                         </p>
                         <p>
                             2018
@@ -86,7 +88,7 @@
                         <p>
                             I developed this app while studying for FEND program at Udacity.
                             I utilized data from Google API and Foursquare API to display a list of restaurants in my favourite neighborhood in Barcelona.
-                            It features responsive design and dropdown menu that filters list and the markers by category.
+                            It features responsive design and dropdown menu that filters the list and the markers by category.
                         </p>
                         <p>
                             2017
