--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="pinterest" content="nopin" />
-        <meta name="description" content="Marina Valiquette - Web Developer">
-        <title>Marina Valiquette's Portfolio</title>
+        <meta name="description" content="Marina Valiquette - full stack web developer who has a strong passion for designing and developing responsive, a11y-friendly applications while producing quality well-tested code.">
+        <title>Portfolio | Marina Valiquette - full stack web developer</title>
         <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
         <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css" rel="stylesheet">
         <link rel="stylesheet" href="css/main.css">
+        <link rel="shortcut icon" href="favicon.ico">
+
     </head>
 
     <body class="container-fluid">
@@ -28,79 +30,56 @@
             <h3 class="col-xs" id="main-header">projects</h3>
             <div class="col-xs" id="main-header-bar"></div>
             <div id="gallery">
+                <article>
+                    <h4 class="article-title">
+                        Frames
+                    </h4>
+                    <div class="article-text">
+                        <p>React/Redux, Node/Express, MongoDB</p>
+                        <p>
+                            Frames is mobile-friendly, intuitive, and easy to use staff scheduling application for small businesses.
+                            This MVP was a team project that I had a pleasure to work on with <a href="https://mdargitz.com/" target="_blank">Marina Dargitz</a>,
+                            <a href="http://csprier.surge.sh/" target="_blank">Cameron Prier</a>, and
+                            <a href="https://www.linkedin.com/in/gianluca-paterson-17768278/" target="_blank">Gianluca Paterson</a> while studying
+                            for the EI program at Thinkful. I really enjoyed using the agile techniques with my team. I believe it helped us to stay focused and on track, and
+                            to accomplish a lot within the 3-week period.
+                        </p>
+                        <p>
+                            August, 2018
+                        </p>
+                    </div>
+                    <div class="article-img-holder">
+                        <img class="article-img" src="images/frames_schreenshots.png" alt="Screenshots of the Frames app" nopin="nopin"/>
+                    </div>
+
+                    <div class="article-bttns">
+                        <a class="btn btn-play" href="https://frames-app.surge.sh" role="link" title="Frames - staff scheduling app" target="_blank">Live</a>
+                        <a class="btn btn-link" href="https://github.com/valsakel/frames-client" role="link" title="Frames - GitHub repository" target="_blank">GitHub</a>
+                    </div>
+                </article>
 
                 <article>
                     <h4 class="article-title">
-                        Streamlined Beauty App
+                        Streamlined Beauty
                     </h4>
                     <div class="article-text">
-                        <p>React, Redux, Node/Express, PostgresSQL</p>
+                        <p>React/Redux, Node/Express, PostgresSQL</p>
                         <p>
                             I designed, implemented and deployed this MVP in two weeks while studying for Engineering Immersion program at Thinkful.
-                            My goal was to build a single-page, responsive, a11y-friendly app that appeals to freelance beauty professionals and consumers in metro Atlanta area.
-                            It features authentication, data persistence, account signup and more.
+                            I wanted to build a single-page, responsive, a11y-friendly app that appeals to freelance beauty professionals and consumers in metro Atlanta area.
+                            It features authentication, data persistence, multi-user account signup and more.
                         </p>
                         <p>
-                            2018
+                            June, 2018
                         </p>
                     </div>
                     <div class="article-img-holder">
-                        <img class="article-img" src="images/responsive-design.png" alt="responsive app views" nopin="nopin"/>
+                        <img class="article-img" src="images/responsive-design.png" alt="Screenshots of the Streamlined Beauty app" nopin="nopin"/>
                     </div>
 
                     <div class="article-bttns">
-                        <a class="btn btn-play" href="https://streamlinedbeauty.netlify.com/" role="button" target="_blank">Live</a>
-                        <a class="btn btn-link" href="https://github.com/Sakela17/streamlined-beauty-app" role="button" target="_blank">GitHub</a>
-                    </div>
-                </article>
-
-                <article>
-                    <h4 class="article-title">
-                        Noteful API
-                    </h4>
-                    <div class="article-text">
-                        <p>Node/Express, MongoDB/Mongoose, Authentication</p>
-                        <p>
-                            I worked on this app while studying for Engineering Immersion program at Thinkful.
-                            This was my first project where I used NodeJS and Express to build a RESTful API for the client.
-                            It features protected endpoints and a Mongo-backed persistence layer.
-                        </p>
-                        <p>
-                            2018
-                        </p>
-                    </div>
-                    <div class="article-img-holder">
-                        <img class="article-img" src="images/noteful_api.png" alt="notes and folders" nopin="nopin"/>
-                    </div>
-
-                    <div class="article-bttns">
-                        <a class="btn btn-play" href="https://evening-wave-51959.herokuapp.com/" role="button" target="_blank">Demo</a>
-                        <a class="btn btn-link" href="https://github.com/Sakela17/noteful-app-MongoDB" role="button" target="_blank">GitHub</a>
-                    </div>
-                </article>
-
-                <article>
-                    <h4 class="article-title">
-                        Neighborhood Map
-                    </h4>
-                    <div class="article-text">
-                        <p>KnockoutJS, ES6 Promises</p>
-                        <p>
-                            I developed this app while studying for FEND program at Udacity.
-                            I utilized data from Google API and Foursquare API to display a list of restaurants in my favourite neighborhood in Barcelona.
-                            It features responsive design and dropdown menu that filters the list and the markers by category.
-                        </p>
-                        <p>
-                            2017
-                        </p>
-                    </div>
-                    <div class="article-img-holder">
-                        <img class="article-img" src="images/neighborhood_map.png" alt="map" nopin="nopin"/>
-                    </div>
-
-                    <div class="article-bttns">
-                        <a class="btn btn-play" href="https://sakela17.github.io/frontend-nanodegree-neighborhood-map/" role="button" target="_blank">Demo</a>
-                        <a class="btn btn-link" href="https://github.com/Sakela17/frontend-nanodegree-neighborhood-map/" role="button" target="_blank">GitHub</a>
+                        <a class="btn btn-play" href="https://streamlinedbeauty.netlify.com/" role="link" title="StreamlinedBeauty - on-demand beauty services" target="_blank">Live</a>
+                        <a class="btn btn-link" href="https://github.com/valsakel/streamlined-beauty-client" role="link" title="StreamlinedBeauty - GitHub repository" target="_blank">GitHub</a>
                     </div>
                 </article>
 
@@ -111,19 +90,20 @@
                     <div class="article-text">
                         <p>OOP, HTML5 Canvas</p>
                         <p>
-                            In this project I used OOP skills to recreate a classic arcade game. In addition to the basic functionality, I implemented player selection, score and a number of lives to make the game more interactive.
+                            I worked on this project while studying for FEND program at Udacity. Using provided game engine and the art assets, I built this
+                            arcade game based on the classical game Frogger. In addition to the basic functionality, I implemented player selection, score and a number of lives to make the game more interactive.
                         </p>
                         <p>
                             2017
                         </p>
                     </div>
                     <div class="article-img-holder">
-                        <img class="article-img" src="images/frogger_cropped.png" alt="frogger game" nopin="nopin"/>
+                        <img class="article-img" src="images/frogger_cropped.png" alt="Screenshot of the arcade game" nopin="nopin"/>
                     </div>
 
                     <div class="article-bttns">
-                        <a class="btn btn-play" href="https://sakela17.github.io/frontend-nanodegree-arcade-game/" role="button" target="_blank">Play</a>
-                        <a class="btn btn-link" href="https://github.com/Sakela17/frontend-nanodegree-arcade-game" role="button" target="_blank">GitHub</a>
+                        <a class="btn btn-play" href="https://valsakel.github.io/arcade-game/" role="link" title="Arcade game" target="_blank">Play</a>
+                        <a class="btn btn-link" href="https://github.com/valsakel/arcade-game" role="link" title="Arcade game - GitHub repository" target="_blank">GitHub</a>
                     </div>
                 </article>
             </div>
@@ -139,7 +119,7 @@
                     <a href="mailto:marina.valiquette@gmail.com" class="" target="_blank">EMAIL</a>
                 </li>
                 <li>
-                    <a href="https://github.com/Sakela17" class="" target="_blank">GITHUB</a>
+                    <a href="https://github.com/valsakel" class="" target="_blank">GITHUB</a>
                 </li>
             </ul>
         </footer>
