Add roles and titles to links

--- a/index.html
+++ b/index.html
@@ -38,9 +38,10 @@
                         <p>React/Redux, Node/Express, MongoDB</p>
                         <p>
                             Frames is mobile-friendly, intuitive, and easy to use staff scheduling application for small businesses.
-                            This MVP was a team project that I had a pleasure to work on with <a href="https://mdargitz.com/" target="_blank">Marina Dargitz</a>,
-                            <a href="http://csprier.surge.sh/" target="_blank">Cameron Prier</a>, and
-                            <a href="https://www.linkedin.com/in/gianluca-paterson-17768278/" target="_blank">Gianluca Paterson</a> while studying
+                            This MVP was a team project that I had a pleasure to work on with
+                            <a href="https://mdargitz.com/" role="link" title="Marina Dargitz profile" target="_blank">Marina Dargitz</a>,
+                            <a href="http://csprier.surge.sh/" role="link" title="Cameron Prier profile" target="_blank">Cameron Prier</a>, and
+                            <a href="https://www.linkedin.com/in/gianluca-paterson-17768278/" role="link" title="Gianluca Paterson profile" target="_blank">Gianluca Paterson</a> while studying
                             for the EI program at Thinkful. I really enjoyed using the agile techniques with my team. I believe it helped us to stay focused and on track, and
                             to accomplish a lot within the 3-week period.
                         </p>
