--- a/index.html
+++ b/index.html
@@ -13,105 +13,135 @@
         <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css" rel="stylesheet">
         <link rel="stylesheet" href="css/main.css">
         <link rel="shortcut icon" href="favicon.ico">
-
     </head>
 
     <body class="container-fluid">
 
-        <section class="page-header-wrapper">
-            <div class="col-xs" id="banner-area">
+        <header class="header-wrapper" role="banner">
+            <div class="hero-section-text">
                 <h1>Marina Valiquette</h1>
                 <h2>Web Developer</h2>
             </div>
-        </section>
+            <div class="hero-section-text hero-section-links">
+                <a href="#about-section">about</a>
+                <span>&nbsp;&nbsp;/&nbsp;&nbsp;</span>
+                <a href="#contacts">contact</a>
+            </div>
+        </header>
         <!--- End Banner Section -->
 
-        <section class="row" id="main">
-            <h3 class="col-xs" id="main-header">projects</h3>
-            <div class="col-xs" id="main-header-bar"></div>
-            <div id="gallery">
-                <article>
-                    <h4 class="article-title">
-                        Frames
-                    </h4>
-                    <div class="article-text">
-                        <p>React/Redux, Node/Express, MongoDB</p>
-                        <p>
-                            Frames is mobile-friendly, intuitive, and easy to use staff scheduling application for small businesses.
-                            This MVP was a team project that I had a pleasure to work on with
-                            <a href="https://mdargitz.com/" role="link" title="Marina Dargitz profile" target="_blank">Marina Dargitz</a>,
-                            <a href="http://csprier.surge.sh/" role="link" title="Cameron Prier profile" target="_blank">Cameron Prier</a>, and
-                            <a href="https://www.linkedin.com/in/gianluca-paterson-17768278/" role="link" title="Gianluca Paterson profile" target="_blank">Gianluca Paterson</a> while studying
-                            for the EI program at Thinkful. I really enjoyed using the agile techniques with my team. I believe it helped us to stay focused and on track, and
-                            to accomplish a lot within the 3-week period.
-                        </p>
-                        <p>
-                            August, 2018
-                        </p>
-                    </div>
-                    <div class="article-img-holder">
-                        <img class="article-img" src="images/frames_schreenshots.png" alt="Screenshots of the Frames app" nopin="nopin"/>
-                    </div>
+        <main role="main">
+            <section>
+                <button type="button" class="scroll-top">&#x2191;</button>
+            </section>
 
-                    <div class="article-bttns">
-                        <a class="btn btn-play" href="https://frames-app.surge.sh" role="link" title="Frames - staff scheduling app" target="_blank">Live</a>
-                        <a class="btn btn-link" href="https://github.com/valsakel/frames-client" role="link" title="Frames - GitHub repository" target="_blank">GitHub</a>
-                    </div>
-                </article>
+            <section class="row">
+                <h3 class="col-xs main-header">projects</h3>
+                <div class="col-xs main-header-bar"></div>
+                <div class="gallery">
+                    <article>
+                        <h4 class="article-title">
+                            Frames
+                        </h4>
+                        <div class="article-text">
+                            <p>React/Redux, Node/Express, MongoDB</p>
+                            <p>
+                                Frames is mobile-friendly, intuitive, and easy to use staff scheduling application for small businesses.
+                                It allows the users to build and maintain an employee database, assign shifts, and use power filters to
+                                customize the schedule view. This MVP was a team project that I had a pleasure to work on with
+                                <a href="https://mdargitz.com/" role="link" title="Marina Dargitz profile" target="_blank">Marina Dargitz</a>,
+                                <a href="http://csprier.surge.sh/" role="link" title="Cameron Prier profile" target="_blank">Cameron Prier</a>, and
+                                <a href="https://www.linkedin.com/in/gianluca-paterson-17768278/" role="link" title="Gianluca Paterson profile" target="_blank">Gianluca Paterson</a>
+                                while studying for the EI program at Thinkful.
+                            </p>
+                            <p>
+                                August, 2018
+                            </p>
+                        </div>
+                        <div class="article-img-holder">
+                            <img class="article-img" src="images/frames_screenshots.png" alt="Screenshots of the Frames app" nopin="nopin"/>
+                        </div>
 
-                <article>
-                    <h4 class="article-title">
-                        Streamlined Beauty
-                    </h4>
-                    <div class="article-text">
-                        <p>React/Redux, Node/Express, PostgresSQL</p>
-                        <p>
-                            I designed, implemented and deployed this MVP in two weeks while studying for Engineering Immersion program at Thinkful.
-                            I wanted to build a single-page, responsive, a11y-friendly app that appeals to freelance beauty professionals and consumers in metro Atlanta area.
-                            It features authentication, data persistence, multi-user account signup and more.
-                        </p>
-                        <p>
-                            June, 2018
-                        </p>
-                    </div>
-                    <div class="article-img-holder">
-                        <img class="article-img" src="images/responsive-design.png" alt="Screenshots of the Streamlined Beauty app" nopin="nopin"/>
-                    </div>
+                        <div class="article-bttns">
+                            <a class="btn btn-play" href="https://frames-app.surge.sh" role="link" title="Frames - staff scheduling app" target="_blank">Live</a>
+                            <a class="btn btn-link" href="https://github.com/valsakel/frames-client" role="link" title="Frames - GitHub repository" target="_blank">GitHub</a>
+                        </div>
+                    </article>
 
-                    <div class="article-bttns">
-                        <a class="btn btn-play" href="https://streamlinedbeauty.netlify.com/" role="link" title="StreamlinedBeauty - on-demand beauty services" target="_blank">Live</a>
-                        <a class="btn btn-link" href="https://github.com/valsakel/streamlined-beauty-client" role="link" title="StreamlinedBeauty - GitHub repository" target="_blank">GitHub</a>
-                    </div>
-                </article>
+                    <article>
+                        <h4 class="article-title">
+                            Streamlined Beauty
+                        </h4>
+                        <div class="article-text">
+                            <p>React/Redux, Node/Express, PostgresSQL</p>
+                            <p>
+                                Inspired by the concept of the beauty-on-demand, StreamlinedBeauty is an advertising platform
+                                that lets the freelance beauty professionals to advertise their services in metro Atlanta.
+                                People that are looking for such services can browse by location and category
+                                to quickly find a professional that will suit their needs. This single-page, responsive,
+                                and a11y-friendly app features authentication, data persistence, multi-user account signup and more.
+                                I designed and built this MVP in two weeks while studying for Engineering Immersion program at Thinkful.
+                            </p>
+                            <p>
+                                June, 2018
+                            </p>
+                        </div>
+                        <div class="article-img-holder">
+                            <img class="article-img" src="images/sb_screenshots.png" alt="Screenshots of the Streamlined Beauty app" nopin="nopin"/>
+                        </div>
 
-                <article>
-                    <h4 class="article-title">
-                        Arcade Game Clone
-                    </h4>
-                    <div class="article-text">
-                        <p>OOP, HTML5 Canvas</p>
-                        <p>
-                            I worked on this project while studying for FEND program at Udacity. Using provided game engine and the art assets, I built this
-                            arcade game based on the classical game Frogger. In addition to the basic functionality, I implemented player selection, score and a number of lives to make the game more interactive.
-                        </p>
-                        <p>
-                            2017
-                        </p>
-                    </div>
-                    <div class="article-img-holder">
-                        <img class="article-img" src="images/frogger_cropped.png" alt="Screenshot of the arcade game" nopin="nopin"/>
-                    </div>
+                        <div class="article-bttns">
+                            <a class="btn btn-play" href="https://streamlinedbeauty.netlify.com/" role="link" title="StreamlinedBeauty - on-demand beauty services" target="_blank">Live</a>
+                            <a class="btn btn-link" href="https://github.com/valsakel/streamlined-beauty-client" role="link" title="StreamlinedBeauty - GitHub repository" target="_blank">GitHub</a>
+                        </div>
+                    </article>
 
-                    <div class="article-bttns">
-                        <a class="btn btn-play" href="https://valsakel.github.io/arcade-game/" role="link" title="Arcade game" target="_blank">Play</a>
-                        <a class="btn btn-link" href="https://github.com/valsakel/arcade-game" role="link" title="Arcade game - GitHub repository" target="_blank">GitHub</a>
-                    </div>
-                </article>
-            </div>
-        </section>
+                    <article>
+                        <h4 class="article-title">
+                            Arcade Game Clone
+                        </h4>
+                        <div class="article-text">
+                            <p>OOP, HTML5 Canvas</p>
+                            <p>
+                                I worked on this project while studying for FEND program at Udacity. Using provided game engine and the art assets, I built this
+                                arcade game based on the classical game Frogger. In addition to the basic functionality, I implemented player selection, score and a number of lives to make the game more interactive.
+                            </p>
+                            <p>
+                                2017
+                            </p>
+                        </div>
+                        <div class="article-img-holder">
+                            <img class="article-img" src="images/frogger_cropped.png" alt="Screenshot of the arcade game" nopin="nopin"/>
+                        </div>
+
+                        <div class="article-bttns">
+                            <a class="btn btn-play" href="https://valsakel.github.io/arcade-game/" role="link" title="Arcade game" target="_blank">Play</a>
+                            <a class="btn btn-link" href="https://github.com/valsakel/arcade-game" role="link" title="Arcade game - GitHub repository" target="_blank">GitHub</a>
+                        </div>
+                    </article>
+                </div>
+            </section>
+
+
+
+        </main>
         <!---End Main Section-->
 
-        <footer class="row">
+        <section id="about-section" class="row">
+            <h3 class="col-xs main-header">about</h3>
+            <div class="col-xs main-header-bar"></div>
+            <p class="about-text">
+                I'm a full stack developer with a passion for creating clean, modern, mobile ready web applications
+                that put the user experience first. In my most recent projects I've used HTML, CSS and
+                JavaScrip on the front end and NodeJS/Express, PostgresSQL and MongoDB on the back but I also have
+                some expertise in KnockoutJS and Angular 4. I equally enjoy developing individually
+                and on a team.<br>When I’m not obsessing over my latest project, I like exploring new and old places, read anything I
+                can get my hands on, and play piano.
+            </p>
+        </section>
+
+        <footer id="contacts" class="row" role="contentinfo">
+            <!--<p class="footer-secondary-text">LET'S CONNECT</p>-->
             <ul>
                 <li>
                     <a href="https://www.linkedin.com/in/marina-valiquette/" class="" target="_blank">LINKEDIN</a>
@@ -127,6 +157,6 @@
         <!---End Footer-->
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+        <script src="./scripts/index.js"></script>
     </body>
 </html>
